# simple-saga

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/: CICD_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
simple_saga/: __init__.py  saga.py  schema.py
simple_saga/saga/: base.py  saga.py  sync_saga.py
tests/: __init__.py  conftest.py  test_compensation.py  test_error_handling.py  test_saga.py  test_sync_async.py
tests/saga/: test_compensation.py  test_saga.py  test_sync_saga.py
