[tool.poetry]
name = "simple-saga"
version = "0.1.3"
description = "A lightweight implementation of the Saga pattern for managing distributed transactions in Python"
authors = ["Tetsuya Wakita <wakita181009@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["saga", "distributed-transactions", "microservices", "transaction-management", "arrow-kt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "simple_saga" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.2"
pytest-asyncio = "==1.3.0"
pytest-cov = "==7.0.0"
mypy = "==1.19.1"
ruff = "==0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
]
ignore = [
    "ARG001",
    "E501", # line too long (handled by black)
]
