[project]
name = "simple-saga"
version = "0.1.6"
description = "A lightweight implementation of the Saga pattern for managing distributed transactions in Python"
authors = [{ name = "Tetsuya Wakita", email = "wakita181009@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["saga", "distributed-transactions", "microservices", "transaction-management", "arrow-kt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ty==0.0.60",
    "ruff==0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
]
ignore = [
    "ARG001",
    "E501", # line too long (handled by black)
]
